# AapLearningProgram

./: CMakeLists.txt  IPTable.cfg  MainActivity.java  MyAdmin.java  README.md  gw_cli_Abe.cfg  native-lib.cpp
CmkCppApp/: settings.gradle
CmkCppApp/app/: build.gradle
CmkCppApp/app/src/androidTest/java/com/example/cmkcppapp/: ExampleInstrumentedTest.java
CmkCppApp/app/src/main/: AndroidManifest.xml
CmkCppApp/app/src/main/cpp/: 24linkList.hpp  24string.hpp  native-lib.cpp
CmkCppApp/app/src/main/java/com/example/cmkcppapp/: MainActivity.java
CmkCppApp/app/src/main/res/layout/: activity_main.xml
CmkCppApp/app/src/main/res/values/: strings.xml
CmkCppApp/app/src/test/java/com/example/cmkcppapp/: ExampleUnitTest.java
CmkCppApp/gradle/wrapper/: gradle-wrapper.properties
KexServerNative_genericSer/: CGatewayConfig.cpp  CGatewayConfig.h  CKeGateWay.cpp  CKeGateWay.h  CMakeLists.txt  CSerializable.cpp  CSerializable.h  Readme.md  native-lib.cpp
KexServerNative_genericSer/comm/: CComm.cpp  CComm.h  CKeConn.cpp  CKeConn.h  CTcpComm.cpp  CTcpComm.h
KexServerNative_genericSer/include/: gf2x.h  gmp.h  hybrid_kem.h  hybrid_kem.h.bak.nist_level_1  hybrid_kem.h.bak.nist_level_5  hybrid_kem.h.in  pqc.h  pqch_ciphersuite.h  pqch_kdf.h  pqke.h  pqke_kd.h  pqke_ke.h  pqke_kg.h
KexServerNative_genericSer/include/NTL/: mach_desc.h
KexServerNative_genericSer/include/gf2x/: gf2x-config-export.h  gf2x-config.h
KexServerNative_genericSer/include/libipc/: ipc_shm_generic.h
KexServerNative_genericSer/include/libkeccak.so.headers/: SP800-185.inc
KexServerNative_genericSer/include/libpqch/: libpqch.h
KexServerNative_genericSer/include/openssl/: ._hmac.h
KexServerNative_genericSer/kems/: CBikeKem.cpp  CBikeKem.h  CFrodoKem.cpp  CFrodoKem.h  CKem.cpp  CKem.h  CRsaKem.cpp  CRsaKem.h
KexServerNative_genericSer/keps/: CAppKep.h  CKepPhi.cpp  CKepPhi.h  CKepPsiPrime.cpp  CKepPsiPrime.h
KexServerNative_genericSer/lower_keps/: CHybridTwoPassKep.cpp  CHybridTwoPassKep.h  CKemKep.cpp  CKemKep.h  CKemTwoPassKep.cpp  CKemTwoPassKep.h  CKep.cpp  CKep.h  CTwoPassKep.cpp  CTwoPassKep.h
KtFileReader/: settings.gradle
KtFileReader/app/: build.gradle
KtFileReader/app/src/androidTest/java/com/example/ktfilereader/: ExampleInstrumentedTest.kt
KtFileReader/app/src/main/: AndroidManifest.xml
KtFileReader/app/src/main/java/com/example/ktfilereader/: FileUtils.kt  FirstFragment.kt  MainActivity.kt  SecondFragment.kt
KtFileReader/app/src/main/res/layout/: fragment_first.xml
KtFileReader/app/src/main/res/menu/: menu_main.xml
KtFileReader/app/src/main/res/navigation/: nav_graph.xml
KtFileReader/app/src/main/res/values/: colors.xml  strings.xml
KtFileReader/app/src/test/java/com/example/ktfilereader/: ExampleUnitTest.kt
KtFileReader/gradle/wrapper/: gradle-wrapper.properties
My1stApp/: settings.gradle
My1stApp/app/: build.gradle
My1stApp/app/src/androidTest/java/com/example/my1stapplication/: ExampleInstrumentedTest.java
My1stApp/app/src/main/: AndroidManifest.xml
My1stApp/app/src/main/cpp/: CMakeLists.txt  importTest.cpp
My1stApp/app/src/main/java/com/example/my1stapplication/: MainActivity.java
My1stApp/app/src/main/res/layout/: activity_main.xml
My1stApp/app/src/main/res/values/: strings.xml
My1stApp/app/src/test/java/com/example/my1stapplication/: ExampleUnitTest.java
My1stApp/gradle/wrapper/: gradle-wrapper.properties
NDKcrossCompileTest/: AndroidManifest.xml  ReadMe.md  android.cmake  native-lib.cpp  openssl_android.sh  toolchains_path.py
setup/: KeyExchange_Client_setup.docx  Lib_list.docx  WireGuard_Client_setup.docx
wireguard@v0.0.20201119-0.20201215171155-74008520cdd9/device/: constants.go  noise-protocol.go  receive.go
wireguard@v0.0.20201119-0.20201215171155-74008520cdd9/ownTest/: IPTable.cfg  convert.go  pqkss.data  privatekey  publickey  sessionInfo  wg0.conf
